table doesn't load

--- a/ZaHunter/Info.plist
+++ b/ZaHunter/Info.plist
@@ -36,5 +36,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Can I find you some Za, bra?</string>
 </dict>
 </plist>
